align fix

--- a/apps/web/src/components/FrequentlyAskedQuestionsSection/FrequentlyAskedQuestionsSection.module.scss
+++ b/apps/web/src/components/FrequentlyAskedQuestionsSection/FrequentlyAskedQuestionsSection.module.scss
@@ -45,7 +45,7 @@
 .faqCard {
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  align-items: flex-start;
   cursor: pointer;
   min-height: 40px;
 
